Cleanup hashcode/equals using Ojbects (#448)
* chore: Cleanup hashcode and equals using Objects

* chore: clean codes

* chore: clean codes

* chore: clean codes

* chore: clean codes

* chore: clean codes

* chore: clean codes

* chore: clean codes