@@ -1,9 +1,12 @@
 package org.eclipse.cargotracker.domain.model.cargo;
 
-import jakarta.persistence.*;
+import jakarta.persistence.CascadeType;
+import jakarta.persistence.Embeddable;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.OneToMany;
+import jakarta.persistence.OrderColumn;
 import jakarta.validation.constraints.NotEmpty;
 import jakarta.validation.constraints.Size;
-import org.apache.commons.lang3.Validate;
 import org.eclipse.cargotracker.domain.model.handling.HandlingEvent;
 import org.eclipse.cargotracker.domain.model.location.Location;
 
@@ -50,15 +53,20 @@ public class Itinerary implements Serializable {
     }
 
     public Itinerary(List<Leg> legs) {
-        Validate.notEmpty(legs);
-        Validate.noNullElements(legs);
+        Objects.requireNonNull(legs, "Legs is required");
+        if (legs.isEmpty()) {
+            throw new IllegalArgumentException("Legs must not be empty");
+        }
+        if (legs.contains(null)) {
+            throw new IllegalArgumentException("Legs must not contain null elements");
+        }
 
         this.legs = legs;
     }
 
     public List<Leg> getLegs() {
         // this.legs.sort(Comparator.comparing(Leg::getLoadTime));
-        return Collections.unmodifiableList(this.legs);
+        return List.copyOf(this.legs);
     }
 
     /**
@@ -74,7 +82,7 @@ public class Itinerary implements Serializable {
         // location
         return switch (event.getType()) {
             case RECEIVE -> {
-                Leg leg = legs.get(0);
+                Leg leg = legs.getFirst();
                 yield leg.getLoadLocation().equals(event.getLocation());
             }
             case LOAD -> legs.stream()
@@ -103,7 +111,7 @@ public class Itinerary implements Serializable {
         if (legs.isEmpty()) {
             return Location.UNKNOWN;
         } else {
-            return legs.get(0).getLoadLocation();
+            return legs.getFirst().getLoadLocation();
         }
     }
 
@@ -132,49 +140,23 @@ public class Itinerary implements Serializable {
      * @return The last leg on the itinerary.
      */
     Leg getLastLeg() {
-        if (legs.isEmpty()) {
-            return null;
-        } else {
-            return legs.get(legs.size() - 1);
-        }
-    }
-
-    private boolean sameValueAs(Itinerary other) {
-        // return other != null && legs.equals(other.legs);
-        //
-        // Hibernate issue:
-        // When comparing a `List` type property of an entity, it is also a proxy class in runtime.
-        // Use a `copyOf` to compare using the contained items temporally.
-        return other != null && Objects.equals(List.copyOf(this.legs), List.copyOf(other.legs));
+        return legs.isEmpty() ? null : legs.getLast();
     }
 
     @Override
     public boolean equals(Object o) {
-        if (this == o) {
-            return true;
-        }
-
-        //        if (o == null || getClass() != o.getClass()) {
-        //            return false;
-        //        }
-        //
-        // https://stackoverflow.com/questions/27581/what-issues-should-be-considered-when-overriding-equals-and-hashcode-in-java
-        // Hibernate issue:
-        // `getClass() != o.getClass()` will fail if comparing the objects in different
-        // transactions/sessions.
-        // The generated dynamic proxies are always different classes.
-        if (o == null || !(o instanceof Itinerary)) {
+        if (!(o instanceof Itinerary itinerary)) {
             return false;
         }
 
-        Itinerary itinerary = (Itinerary) o;
-
-        return sameValueAs(itinerary);
+        // Hibernate issue:
+        // When comparing a `List` type property of an entity, it is also a proxy class in runtime.
+        // Use a `copyOf` to compare using the contained items temporally.
+        return Objects.equals(List.copyOf(this.legs), List.copyOf(itinerary.legs));
     }
 
     @Override
     public int hashCode() {
-        // return legs.hashCode();
         return Objects.hashCode(List.copyOf(legs));
     }
 
