@@ -1,10 +1,13 @@
 package org.eclipse.cargotracker.domain.model.voyage;
 
 import jakarta.annotation.Nonnull;
-import jakarta.persistence.*;
+import jakarta.persistence.CascadeType;
+import jakarta.persistence.Embeddable;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.OneToMany;
+import jakarta.persistence.OrderColumn;
 import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Size;
-import org.apache.commons.lang3.Validate;
 
 import java.io.Serializable;
 import java.util.Collections;
@@ -37,35 +40,28 @@ public class Schedule implements Serializable {
     }
 
     public Schedule(@Nonnull List<CarrierMovement> carrierMovements) {
-        Validate.notNull(carrierMovements, "Carrier movements is required");
-        Validate.noNullElements(carrierMovements);
-        Validate.notEmpty(carrierMovements);
+        Objects.requireNonNull(carrierMovements, "Carrier movements is required");
+        if (carrierMovements.isEmpty()) {
+            throw new IllegalArgumentException("Carrier movements must not be empty");
+        }
+        if (carrierMovements.contains(null)) {
+            throw new IllegalArgumentException("Carrier movements must not contain null elements");
+        }
 
         this.carrierMovements = carrierMovements;
     }
 
     public List<CarrierMovement> getCarrierMovements() {
-        return Collections.unmodifiableList(carrierMovements);
-    }
-
-    private boolean sameValueAs(Schedule other) {
-        return other != null
-                && Objects.equals(
-                List.copyOf(carrierMovements), List.copyOf(other.carrierMovements));
+        return List.copyOf(carrierMovements);
     }
 
     @Override
     public boolean equals(Object o) {
-        if (this == o) {
-            return true;
-        }
-        if (o == null || getClass() != o.getClass()) {
+        if (!(o instanceof Schedule that)) {
             return false;
         }
 
-        Schedule that = (Schedule) o;
-
-        return sameValueAs(that);
+        return Objects.equals(List.copyOf(carrierMovements), List.copyOf(that.carrierMovements));
     }
 
     @Override
